--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,34 +4,18 @@
 #
 version: 2
 jobs:
-  build:
+  unit_test:
     docker:
       - image: circleci/ruby:2.4-node-browsers
     working_directory: ~/repo
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "Gemfile.lock" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run:
-          name: install dependencies
-          command: |
-            bundle install --jobs=4 --retry=3 --path bundle
-
-      - save_cache:
-          paths:
-            - ./bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-
       # run tests!
       - run:
           name: run tests
           command: |
+            bundle install --jobs=4 --retry=3 --path bundle
             cd src
             ruby test-cmdline-option-parser.rb
             ruby test-docker-registry-cli.rb
