--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 #
 version: 2
 jobs:
-  unit_test:
+  build:
     docker:
       - image: circleci/ruby:2.4-node-browsers
     working_directory: ~/repo
